Build and test multiple java versions